2015-08-01  Koichi INOUE  <inoue@windy.local>

	* Add `step` and `gate` command to set default ST and GT respectively.

	* Raise error on unclosed parentheses at the end of input.

	* ST and GT was reversed when the note was written in digit.

2015-07-31  Koichi INOUE  <inoue@windy.local>

	* Exchange 2nd and 3rd colum in text notation. The order is now step time and gate time, which is generally accepted.

2015-07-19  Koichi INOUE  <inoue@windy.local>

	* Add macro feature.

2015-07-19  Koichi INOUE  <inoue@windy.local>

	* Rename midilib.rb to midilib_exporter.rb to match the class name.

2014-08-10  Koichi INOUE  <inoue@windy>

	* Fix calculation of note timing when length and delay is specified.

2014-07-30  Koichi INOUE  <inoue@windy>

	* Version 0.1.1
	* Support writing a note as a note number.

2014-07-27  Koichi INOUE  <ushiushix@gmail.com>

	* Version 0.1.0
	* Now depends on ruby 2.0.0 or later.
	* TextSequencer::Sequencer is the entry point instead of TextSequencer::Parser.

2012-08-19  Koichi INOUE  <ushiushix@gmail.com>

	* Initial release